--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,6 +34,13 @@
     }
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "src-tauri/target"],
+  "exclude": [
+    "node_modules",
+    "dist",
+    "src-tauri/target",
+    "src/**/*.test.ts",
+    "src/**/*.test.tsx",
+    "src/test/**/*"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
