--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "tauri": "tauri",
     "dev:tauri": "tauri dev",
     "build:tauri": "tauri build",
-    "build:windows": "tauri build --target x86_64-pc-windows-msvc",
+    "build:windows": "powershell -ExecutionPolicy Bypass -File ./scripts/build-windows.ps1",
     "build:macos": "tauri build --target x86_64-apple-darwin",
     "build:macos-arm": "tauri build --target aarch64-apple-darwin",
     "build:linux": "tauri build --target x86_64-unknown-linux-gnu",
